# MC_A3

./: README.md
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  matrix_operations.cpp  matrix_operations.h
app/src/main/java/com/example/myapplication/: MainActivity.kt  MatrixOperations.kt
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
